feat: 데이터베이스 스키마 및 성능 최적화 대폭 개선
- 스키마 관리 안정화: ddl-auto=validate 설정으로 런타임 스키마 변경 방지
- 인덱스 전략 강화: 복합 인덱스, 전문 검색 인덱스, 파티셔닝 인덱스 추가
- 트랜잭션 경계 명확화: 각 메서드 책임에 맞는 트랜잭션 설정 적용
- N+1 쿼리 문제 해결: JOIN FETCH를 사용한 단일 쿼리로 성능 향상
- 배치 처리 최적화: 청크 단위 처리 및 재시도 로직 구현
- 데이터베이스 설정 개선: HikariCP 최적화 및 모니터링 강화